[package]
name = "lghnay"
version = "0.1.0"
edition = "2021"
authors = ["soubai <gx.coder@gmail.com>"]

default-features = false



[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.6", features = ['http', 'd1'] }
worker-macros = { version = "0.6", features = ['http'] }
http = "1.3"
serde = "1.0.228"
serde_json = "1.0.145"
